fix(hs): add text-align to errorMessage styles

--- a/packages/headless-styles/src/components/ErrorMessage/errorMessageCSS.module.css
+++ b/packages/headless-styles/src/components/ErrorMessage/errorMessageCSS.module.css
@@ -6,4 +6,5 @@
   font-variation-settings: 'wght' 400;
   font-weight: 400;
   padding-top: 8px;
+  text-align: left;
 }
